# okecc

./: .gitmodules  CMakeLists.txt  Makefile  README.md  mcmgr.h  memcard.mcd  okecc.cpp  okecc.h  okecc.hpp  okecc.ps1  okecc_sa.cpp  sample.cpp  test_176chip.cpp  test_all_chip.cpp
okecc/: CMakeLists.txt  gen_func_if.ps1  mcmgr.h  okecc.cpp  okecc.h  okecc.sln  okecc_sa.cpp  okedcc.cpp  opt_coordinate.h
okecc/okecc/: okecc.vcxproj  okecc.vcxproj.filters
